[tool.poetry]
name = "pyrcrack"
version = "1.1.0"
description = "Pythonic aircrack-ng bindings"
license = "MIT"
authors = ["David Francos <opensource@davidfrancos.net>"]
readme = 'Readme.rst'

[tool.poetry.dependencies]
python = "^3.8"
stringcase = "^1.2"
docopt = "^0.6.2"
async-timeout = "^3.0"
parse = "^1.12"
pytest-asyncio = "^0.14.0"
geopy = "^2.0.0"
mac-vendor-lookup = "^0.1.11"
pyshark = "^0.4.2"
xmltodict = "^0.12.0"
dotmap = "^1.3.17"
rich = "^7.1.0"

[tool.poetry.dev-dependencies]
pytest-flake8 = "^1.0"
pycodestyle = "^2.5"
pytest-cov = "^2.6"
asynctest = "^0.12.3"
pydocstyle = "^3.0"
sphinx = "^2.0"
behave = "^1.2.6"
yapf = "^0.30.0"
gitchangelog = "^3.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
