[tool.poetry]
name = "pyrcrack"
version = "1.1.2"
description = "Pythonic aircrack-ng bindings"
license = "MIT"
authors = ["David Francos <opensource@davidfrancos.net>"]
readme = 'Readme.rst'

[tool.poetry.dependencies]
python = "^3.8"
stringcase = "^1"
docopt = "^0.6"
async-timeout = "^3"
parse = "^1.12"
pytest-asyncio = "^0.14"
geopy = "^2"
mac-vendor-lookup = "^0.1"
pyshark = "^0.4"
xmltodict = "^0.12"
dotmap = "^1"
rich = "^7"

[tool.poetry.dev-dependencies]
pytest-flake8 = "^1"
pycodestyle = "^2"
pytest-cov = "^2"
asynctest = "^0.12"
pydocstyle = "^3"
sphinx = "^2"
behave = "^1"
yapf = "^0.30"
gitchangelog = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
